fix z-index issue with toast notifications on trade page

--- a/packages/frontend/app/routes/trade.module.css
+++ b/packages/frontend/app/routes/trade.module.css
@@ -60,6 +60,8 @@ body {
     flex-direction: column;
     gap: var(--gap-s);
     overflow: hidden;
+    /* any other z-index value causes this elem to render over toast notifications */
+    z-index: 0;
 }
 
 @media (max-height: 750px) {
